Updates to models apis and ci
